Added boilerplate for getting vehicles
